# libvirt-glib

./: .gitignore  .gitlab-ci.yml  .gitpublish  .hgignore  .mailmap  AUTHORS  AUTHORS.in  GNUmakefile  HACKING  Makefile.am  NEWS  README  acinclude.m4  autobuild.sh  autogen.sh  cfg.mk  configure.ac  libvirt-gconfig-1.0.pc.in  libvirt-glib-1.0.pc.in  libvirt-glib.pc.in  libvirt-glib.spec.in  libvirt-gobject-1.0.pc.in  maint.mk  meson-config.h.in  meson.build  meson_options.txt  mingw-libvirt-glib.spec.in  mingw32-libvirt-glib.spec.in  prepare-release.sh  tap-driver.sh
.github/: lockdown.yml
.github/workflows/: lockdown.yml
.tx/: config
build-aux/: Makefile.in  cfg.mk  check-symsorting.pl  check-symsorting.py  maint.mk  meson.build  syntax-check.mk
ci/: gitlab.yml  manifest.yml
ci/buildenv/: almalinux-10.sh  almalinux-8.sh  almalinux-9.sh  alpine-edge.sh  centos-stream-10.sh  centos-stream-8.sh  centos-stream-9.sh  debian-11.sh  fedora-37-cross-mingw32.sh  fedora-42.sh  fedora-44-cross-mingw32.sh  fedora-44.sh  fedora-rawhide-cross-mingw32.sh  fedora-rawhide-cross-mingw64.sh  (+7 more)
docs/: Makefile.am  meson.build
docs/libvirt-gconfig/: Libvirt-gconfig-docs.xml  Libvirt-gconfig-sections.txt  Makefile.am  meson.build
docs/libvirt-glib/: Libvirt-glib-docs.xml  Libvirt-glib-sections.txt  Makefile.am  meson.build
docs/libvirt-gobject/: Libvirt-gobject-docs.xml  Libvirt-gobject-sections.txt  Makefile.am  meson.build
examples/: Makefile.am  config-demo.py  conn-test.c  conn-test.js  conn-test.py  event-test.c  event-test.py  meson.build
include/: Makefile.am
libvirt-gconfig/: Makefile.am  libvirt-gconfig-capabilities-cpu-feature.c  libvirt-gconfig-capabilities-cpu-feature.h  libvirt-gconfig-capabilities-cpu-model.c  libvirt-gconfig-capabilities-cpu-model.h  libvirt-gconfig-capabilities-cpu-private.h  libvirt-gconfig-capabilities-cpu-topology.c  libvirt-gconfig-capabilities-cpu-topology.h  libvirt-gconfig-capabilities-cpu.c  libvirt-gconfig-capabilities-cpu.h  libvirt-gconfig-capabilities-guest-arch.c  libvirt-gconfig-capabilities-guest-arch.h  libvirt-gconfig-capabilities-guest-domain.c  libvirt-gconfig-capabilities-guest-domain.h  libvirt-gconfig-capabilities-guest-feature.c  libvirt-gconfig-capabilities-guest-feature.h  libvirt-gconfig-capabilities-guest.c  libvirt-gconfig-capabilities-guest.h  libvirt-gconfig-capabilities-host-secmodel.c  libvirt-gconfig-capabilities-host-secmodel.h  libvirt-gconfig-capabilities-host.c  libvirt-gconfig-capabilities-host.h  libvirt-gconfig-capabilities.c  libvirt-gconfig-capabilities.h  libvirt-gconfig-compat.h  libvirt-gconfig-domain-address-pci.c  libvirt-gconfig-domain-address-pci.h  libvirt-gconfig-domain-address-usb.c  libvirt-gconfig-domain-address-usb.h  libvirt-gconfig-domain-address.c  libvirt-gconfig-domain-address.h  libvirt-gconfig-domain-audio.c  libvirt-gconfig-domain-audio.h  libvirt-gconfig-domain-capabilities-os.c  libvirt-gconfig-domain-capabilities-os.h  libvirt-gconfig-domain-capabilities.c  libvirt-gconfig-domain-capabilities.h  libvirt-gconfig-domain-channel.c  libvirt-gconfig-domain-channel.h  libvirt-gconfig-domain-chardev-source-private.h  (+150 more)
libvirt-gconfig/tests/: Makefile.am  meson.build  test-capabilities-parse.c  test-capabilities-parse.xml  test-domain-create.c  test-domain-duplicate.xml  test-domain-invalid.xml  test-domain-noname.xml  test-domain-parse.c  test-domain.xml
libvirt-glib/: Makefile.am  libvirt-glib-error.c  libvirt-glib-error.h  libvirt-glib-event.c  libvirt-glib-event.h  libvirt-glib-main.c  libvirt-glib-main.h  libvirt-glib.h  libvirt-glib.sym  meson.build
libvirt-gobject/: Makefile.am  libvirt-gobject-compat.c  libvirt-gobject-compat.h  libvirt-gobject-connection.c  libvirt-gobject-connection.h  libvirt-gobject-domain-config.c  libvirt-gobject-domain-config.h  libvirt-gobject-domain-device-private.h  libvirt-gobject-domain-device.c  libvirt-gobject-domain-device.h  libvirt-gobject-domain-disk.c  libvirt-gobject-domain-disk.h  libvirt-gobject-domain-interface.c  libvirt-gobject-domain-interface.h  libvirt-gobject-domain-snapshot.c  libvirt-gobject-domain-snapshot.h  libvirt-gobject-domain.c  libvirt-gobject-domain.h  libvirt-gobject-enums.c.template  libvirt-gobject-enums.h.template  libvirt-gobject-input-stream.c  libvirt-gobject-input-stream.h  libvirt-gobject-interface.c  libvirt-gobject-interface.h  libvirt-gobject-main.c  libvirt-gobject-main.h  libvirt-gobject-manager.c  libvirt-gobject-manager.h  libvirt-gobject-network-dhcp-lease-private.h  libvirt-gobject-network-dhcp-lease.c  libvirt-gobject-network-dhcp-lease.h  libvirt-gobject-network-filter.c  libvirt-gobject-network-filter.h  libvirt-gobject-network.c  libvirt-gobject-network.h  libvirt-gobject-node-device.c  libvirt-gobject-node-device.h  libvirt-gobject-output-stream.c  libvirt-gobject-output-stream.h  libvirt-gobject-secret.c  (+13 more)
m4/: virt-compile-warnings.m4  virt-gettext.m4  virt-nls.m4
po/: LINGUAS  Makefile.am  POTFILES.in  README.md  ach.po  af.mini.po  af.po  aln.po  am.mini.po  am.po  anp.mini.po  anp.po  ar.mini.po  ar.po  as.mini.po  as.po  ast.mini.po  ast.po  az.po  bal.mini.po  bal.po  be.mini.po  be.po  bg.mini.po  bg.po  bn.mini.po  bn.po  bn_IN.mini.po  bn_IN.po  bo.mini.po  bo.po  br.mini.po  br.po  brx.mini.po  brx.po  bs.mini.po  bs.po  ca.mini.po  ca.po  cs.mini.po  (+179 more)
python/: Makefile.am  libvirt-glib.c  libvirtglib.py
src/: Makefile.am  events.c  libvirt_glib.sym
tests/: Makefile.am  meson.build  test-events.c  test-gconfig.c
tests/xml/: gconfig-domain-capabilities-os.xml  gconfig-domain-clock.xml  gconfig-domain-cpu.xml  gconfig-domain-device-channel.xml  gconfig-domain-device-console.xml  gconfig-domain-device-disk.xml  gconfig-domain-device-filesys.xml  gconfig-domain-device-graphics.xml  gconfig-domain-device-input.xml  gconfig-domain-device-network.xml  gconfig-domain-device-pci-hostdev.xml  gconfig-domain-device-sound.xml  gconfig-domain-device-unknown.xml  gconfig-domain-device-usbredir.xml  gconfig-domain-device-video.xml  gconfig-domain-os.xml  gconfig-domain.xml
vapi/: Makefile.am
(+91 files in other folders)
